# md2enex

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  html2enex.py  md2enex.py  pyproject.toml  pytest.ini  requirements.txt  todo.md  ubuntu.Dockerfile
.github/: FUNDING.yml
.github/workflows/: ci.yaml
md2enex/: md2enex.py
md2enex/xml_cache/xml.evernote.com/pub/: enml3.dtd
test/test1/: target.enex  test1.html  test1.md
test/test2/: target.enex  test2.1.html  test2.1.md  test2.2.html  test2.2.md  test2.3.html  test2.3.md
test/test3/: target.enex  xxx.md
tests/: test_cli.py
tests/test-img/: target.enex  test-img-1.md
tests/test-media/: target.enex  test-attachments.md  test-images.md  test-media.md
tests/test1/: target.enex  test1.md
tests/test2/: target.enex  test2.1.md  test2.2.md  test2.3.md
tests/test3/: target.enex  test3 -.md  test3.img.md  test3.oddchars.md  xxx.md
tests/test4/: target.enex  test4.markdownyaml.md
tests/test5/: target.enex  test5.tasklist.md
xml_cache/: catalog.xml
xml_cache/xml.evernote.com/pub/: evernote-export4.dtd
