[project]
name = "md2enex"
version = "1.0"
description = "Converts markdown to Evernote ENEX files so they can be imported"
authors = [{ name = "karloskalcium" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "lxml>=5.2.1,<6",
    "pypandoc-binary~=1.13",
    "typer>=0.16.0",
    "python-frontmatter>=1.0.0,<2",
]

[project.urls]
Repository = "https://github.com/karloskalcium/md2enex"

[project.scripts]
md2enex = "md2enex.md2enex:main"

[dependency-groups]
dev = [
    "freezegun>=1.5.1,<2",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-pytest
    "PT",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.coverage.run]
branch = true
source = [
    "md2enex",
]
omit = [
    "**/tests/*",
    "**/test_*",
    "**/conftest*",
    "**/__init__.py",
    "**/__main__.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

ignore_errors = true

[tool.coverage.html]
directory = "results/coverage"

[tool.pytest.ini_options]
# Show extra test summary info as specified by chars (a)ll except passed
# Output test results to junit.xml
addopts = "-vvv --tb=long -ra --junitxml=results/unit/pytest-unit.xml --color=yes"
testpaths = "tests"
# log_cli = true
# log_cli_level = "DEBUG"
